Refactor app-db.json structure to use arrays

--- a/app-db.json
+++ b/app-db.json
@@ -1,16 +1,16 @@
-{
+[
   {
- 	  id: '1',
-    title: 'श्री गुरु जम्भेश्वर शब्दवाणी',
-    subtitle: '120 शब्द',
-    author: 'श्री गुरु जम्भेश्वर',
-	  cardImage: require('../../assets/om.png'), 	
-    coverImage: require('../../assets/guru-jhambheshwar.png'), 
-    description: 'श्री गुरु जम्भेश्वर भगवान शब्दवाणी (120 शब्द)',
-	  chaptersCount: 120,
-	  chaptersHeading: " शब्दवाणी ",
-	  bookmarkEnabled: true,
-  	chapters: [
+ 	"id": "1",
+    "title": "श्री गुरु जम्भेश्वर शब्दवाणी",
+    "subtitle": "120 शब्द",
+    "author": "श्री गुरु जम्भेश्वर",
+	"cardImage": require('../../assets/om.png'), 	
+    "coverImage": require('../../assets/guru-jhambheshwar.png'), 
+    "description": 'श्री गुरु जम्भेश्वर भगवान शब्दवाणी (120 शब्द)',
+	"chaptersCount": 120,
+	"chaptersHeading": " शब्दवाणी ",
+	"bookmarkEnabled": true,
+  	"chapters": [
   		{
   			"id": 1,
   			"heading": "शब्द 1",
@@ -853,85 +853,85 @@
   	]
   },
   {
-    id: '2',
-    title: 'जम्भेश्वर आरती',
-    subtitle: '7 आरती',
-    author: 'Tulsidas',
-	  cardImage: require('../../assets/aarti.jpeg'), 
-    coverImage: require('../../assets/aarti.jpeg'),
-    description: 'जम्भेश्वर आरती संग्रह',
-	  chaptersCount: 2,
-	  chaptersHeading: "आरती ",
-	  bookmarkEnabled: false,
-    chapters: [
+    "id": "2",
+    "title": "जम्भेश्वर आरती",
+    "subtitle": "7 आरती",
+    "author": "Tulsidas",
+	"cardImage": require('../../assets/aarti.jpeg'), 
+    "coverImage": require('../../assets/aarti.jpeg'),
+    "description": 'जम्भेश्वर आरती संग्रह',
+	"chaptersCount": 2,
+	"chaptersHeading": "आरती ",
+	"bookmarkEnabled": false,
+    "chapters": [
       {
         "id": 1,
-  		  "heading": "आरती 1",
+  		"heading": "आरती 1",
         "title": 'आरती 1',
         "content": "आरती कीजै गुरु जम्भ जती की, भगत उधारण प्राण पति की।। <br/>पहली आरती लोहट घर आये, बिन बादल प्रभु इमिया झुराये।॥।<br/> दूसरी आरती पींपासर आये, दूदा जी को प्रभु परचो दिखाये।2।<br/> तीसरी आरती सम्भराथल आये, पूल्है जी को प्रभु स्वर्ग दिखाये।3।<br/> चौथी आरती अनू निवाये, भूंच लोक प्रभु पात कहाये।4।<br/> पाँचवी आरती ऊदो जन गाबै, वास वैकुण्ठ अमर पद पावबै।5।",
-  		  "tags": ["aarti"]
+  		"tags": ["aarti"]
       },
   	  {
         "id": 2,
-  		  "heading": "आरती 2",	
+  		"heading": "आरती 2",	
         "title": 'आरती 2',
         "content": "आरती कीजै गुरु जम्भ जती की, भगत उधारण प्राण पति की ।।<br/>पहली आरती लोहट घर आये, बिन बादल प्रभु इमिया झुराये।॥।<br/>दूसरी आरती पींपासर आये, दूदा जी को प्रभु परचो दिखाये।2।<br/>तीसरी आरती सम्भराथल आये, पूल्है जी को प्रभु स्वर्ग दिखाये।3।<br/>चौथी आरती अनू निवाये, भूंच लोक प्रभु पात कहाये।4।<br/>पाँचवी आरती ऊदो जन गाबै, वास वैकुण्ठ अमर पद पावबै।5।",
-  		  "tags": ["aarti"]
+  		"tags": ["aarti"]
       },
   	  {
         "id": 3,
-  		  "heading": "आरती 3",	
+  		"heading": "आरती 3",	
         "title": 'आरती 3',
         "content": "आरती हो जी सम्भराथल देव, विष्णु हर को आरती जय।<br>थारी करे हो हांसल दे माय, थारी करे हो भक्त लिवलाय टेक |<br>सुर तेतीसां सेवक जांके, इन्द्रादिक सब देव।<br>ज्योति स्वरूपी आप निरंजन, कोई एक जानत भेव।॥।<br>पूर्ण सिद्ध जम्भगुरु स्वामी, अबतरे केवलि एक।<br>अन्धकार के नाशन कारण, हुए हुए आप अलेख।2।<br>सम्भराथल हरि आन विराजे, तिमिर भये सब दूर।<br>सांगा राणा और नरेशा, आये आये सकल हजूर।3।<br>सम्भराथल की अद्भुत शोभा, वरणी न जात अपार।<br>सन्त मण्डली निकट विराजे, निर्गुण शब्द उच्चार |4।<br>वर्ष इकक्&zwj;्यावन देव दया कर, कीन्&zwj;न्हों पर उपकार।<br>ज्ञान ध्यान के शब्द सुणाये, तारण भव जल पार ।5।<br>पंथ जाम्भाणों सत कर जाणों, यह खांडे की धार।<br>सत प्रीत सू करो कीर्तन, इच्छा फल दातार।6।<br>आन पंथ को चित से टारो, जम्भेश्वर उर ध्यान।<br>होम जाप शुद्ध भाव से कीजै, पावो पद निर्वाण।7।<br>भक्त उद्धारण काज संवारण, श्री जम्भ गुरु निज नाम।<br>विघ्न निवारण शरण तुम्हारी, मंगल के सुख धाम ।8।<br>लोहट नन्दन दुष्ट निकन्दन, श्री जम्भ गुरु अवतार।<br>ब्रह्मानन्द शरण सतगुरु की, आवागवण निवार |9।",
-  		  "tags": ["aarti"]
+  		"tags": ["aarti"]
       },
   	  {
         "id": 4,
-  		  "heading": "आरती 4",	
+  		"heading": "आरती 4",	
         "title": 'आरती 4',
         "content": "आरती कीजै गुरु जम्भ तुम्हारी, चरण शरण मोही राख मुरारी।<br>पहली आरती उन मुन कीजै, मन वच करम चरण चित दीजै ।१।<br>दूसरी आरती अनहद बाजा, श्रवण सुण्या प्रभु शब्द आवाजा।2।<br>तीसरी आरती कंठ सुर गाबै, नवधा भक्त प्रभु प्रेम रस पावै |3 |<br>चौथी आरती हृदय में पूजा, आतम देव प्रभु और नहीं दूजा।4।<br>पांचवी आरती प्रेम प्रकाशा, कहत ऊदो साधु चरण निवासा |5।",
-  		  "tags": ["aarti"]
+  		"tags": ["aarti"]
       },
   	  {
         "id": 5,
-  		  "heading": "आरती 5",	
+  		"heading": "आरती 5",	
         "title": 'आरती 5',
         "content": "आरती कीजै श्री जम्भगुरु देवा, पार नहीं पावै बाबो अलख अभेवा|<br>पहली आरती परम गुरु आये, तेज पुज काया दरसाये।॥।<br>दूसरी आरती देव विराजै, अनंत कला सतगुरु छवि छाजै।2।<br>तीसरी आरती त्रिसूल ढ़ापै, खुध्या तृष्णा निंदरा नहीं व्यापै।3।<br>चौथी आरती चहुंदिश परसै, पेट पूठ नहीं सनमुख दरसे |4।<br>पांचवी आरती केवल भगवंता, शब्द सुण्या जोजन पर्यन्ता।<br>ऊदो दासजी आरती गावै, श्री जम्भगुरु जी को पार न पावै ।5।",
-  		  "tags": ["aarti"]
+  		"tags": ["aarti"]
       },
   	  {
         "id": 6,
-  		  "heading": "आरती 6",	
+  		"heading": "आरती 6",	
         "title": 'आरती 6',
         "content": "आरती कीजै श्री महा विष्णु देवा, सुरनर मुनि जन करै सब सेवा।<br>पहली आरती शेष पर लौटे, श्री महा लक्ष्मी चरण पलोटे।१।<br>दूसरी आरती खीर समुद्र ध्यावै, नाभि कमल ब्रह्मा उपजाये।2।<br>तीसरी आरती विराट अखंडा, जांके रोम कोट ब्रह्मण्डा।3।<br>चौथी आरती बैकुण्ठ बिलासी, काल अगूंठ सदा ही अविनाशी ।4।<br>पांचवीं आरती घट घट वासा, हरिगुण गाबै ऊदो दासा।5।",
-  		  "tags": ["aarti"]
+  		"tags": ["aarti"]
       },
   	  {
         "id": 7,
-  		  "heading": "जम्भ चरित्र ध्वनि",	
+  		"heading": "जम्भ चरित्र ध्वनि",	
         "title": 'जम्भ चरित्र ध्वनि',
         "content": "आये म्हारे जम्भ गुरु जगदीश, सुरनर मुनि हरि नै नावें सीस ।<br>गुरु आप सम्भराथल आये हो, म्हारे संतों के मन भाये हो टेक ।<br>लोहट घर अवतारा हो, एतो धन धन भाग हमारा हो।॥।<br>अलख निरंजन आये हो, एतो म्हारे संतों के मन भाये हो।2।<br>घट घट मांय विराजै हो, एतो सरस शब्द धुनि गाजै हो।3।<br>जांके चरण कोई ध्यावे हो, एतो चार पदार्थ पावे हो।4।<br>सम्भराथल आसण साजै हो, एतो झिगमिग जोत प्रकाशे हो ।5।<br>नंद घर गऊवें चारी हो, ऐतो नख पर गिरवर धारी हो।6।<br>विराट रूप अखंडा हो, जाके रोम कोट ब्रह्मण्डा हो |7।<br>इस धुन कूं कोई गाबे हो, एतो वास बैकुण्ठे पावे हो ।8।<br>जम्भगुरु जी की आशा हो, ऐतो जस गावे गंगादासा हो।9।",
-  		  "tags": ["aarti"]
+  		"tags": ["aarti"]
       }
     ]
   },
   {
-	  id:'3',
-	  title:'बिश्नोई उन्नतीस नियम',
-	  subtitle: '29 नियम',
-	  cardImage: require('../../assets/prayers.jpeg'), 
-    coverImage: require('../../assets/guru-jhambheshwar.png'),
-    description: 'उन्नतीस नियम',
-	  chaptersCount: 1,
-	  chaptersHeading: "बिश्नोई उन्नतीस नियम ",
-	  bookmarkEnabled: false,
-  	chapters:[
+	"id": "3",
+	"title": "बिश्नोई उन्नतीस नियम",
+	"subtitle": "29 नियम",
+	"cardImage": require('../../assets/prayers.jpeg'), 
+    "coverImage": require('../../assets/guru-jhambheshwar.png'),
+    "description": "उन्नतीस नियम",
+	"chaptersCount": 1,
+	"chaptersHeading": "बिश्नोई उन्नतीस नियम ",
+	"bookmarkEnabled": false,
+  	"chapters":[
   		{
-  			id:'1',
-  			heading:'उन्नतीस नियम',
-  			title:'उन्नतीस नियम',
-  			content:'1. तीस दिन सूतक <br>2. पांच ऋतुवन्ति न्यारो।<br>3. सेरा करो स्नान,<br>4. शील,<br>5. सन्तोष,<br>6. शुचि प्यारो।<br>7. द्विकाल सन्ध्या करो,सांझ आरती गुण गावो।<br>8. होम हित चित प्रीत सू होय,वास वैकूण्ठा पावो।<br>9. पाणी<br>10. बाणी<br>11. ईंधणी<br>12. दूध ज लीजै छाण।<br>13. क्षमा,दया ह्रदय धरो,गुरू बतायो जाण।<br>14. चोरी,<br>15. निन्दा<br>16. झूठ बरजीयो<br>17. बाद न करणो कोय।<br>18. अमावस्या व्रत राखणो<br>19. भजन विष्णु बतायो जोय।<br>20. जीव दया पालणी,रूख लीला नहीं घावै।<br>21. अजर (काम,क्रोध,लोभ,मोह,अहंकार, ईष्र्या) जरै,जीवत मरै वै वास वैकुण्ठे पावै<br>22. करे रसोई आन सूं पलो न लावै।<br>23. अमर रखावे थाट,बैल बधिया न करावै।<br>24. अमल(अफम)<br>25. तम्बाकू<br>26. भांग<br>27. मद(शराब)<br>28. मांस सूं दूर ही भागै।<br>29. लील(नील) न लावै अंग,देखत दूर ही त्यागै।<br><br>*उन्नतीस धरम की आखड़ी,हिरदै धरियो जोय,<br>*जाम्भेजी कृपा करी नाम विश्नोई होय।*<br>'
+  			"id": "1",
+  			"heading": "उन्नतीस नियम",
+  			"title": "उन्नतीस नियम",
+  			"content": "1. तीस दिन सूतक <br>2. पांच ऋतुवन्ति न्यारो।<br>3. सेरा करो स्नान,<br>4. शील,<br>5. सन्तोष,<br>6. शुचि प्यारो।<br>7. द्विकाल सन्ध्या करो,सांझ आरती गुण गावो।<br>8. होम हित चित प्रीत सू होय,वास वैकूण्ठा पावो।<br>9. पाणी<br>10. बाणी<br>11. ईंधणी<br>12. दूध ज लीजै छाण।<br>13. क्षमा,दया ह्रदय धरो,गुरू बतायो जाण।<br>14. चोरी,<br>15. निन्दा<br>16. झूठ बरजीयो<br>17. बाद न करणो कोय।<br>18. अमावस्या व्रत राखणो<br>19. भजन विष्णु बतायो जोय।<br>20. जीव दया पालणी,रूख लीला नहीं घावै।<br>21. अजर (काम,क्रोध,लोभ,मोह,अहंकार,ईष्र्या)जरै,जीवत मरैवैवासवैकुण्ठे पावै<br>22. करेसोईन सूं पलोलावै।<br>23.मरखावेथट,बैलधियान करावै।<br>24.मल(अफम)<br>25.म्बाकू<br>26.भांग<br>27. मद(शराब)<br>28. मांस सूंदूर हीभगै।<br>29.ल(नील)नलवअंग,खतदूर हीत्यगइ।<br><br>*उन्नतीसम कआखड़,हिरदधयजय,<br>*जंभेजकपा कइ म श्ई हय।*<br>"
   		}
   	]
   }
-}
+]
