Replace require with string paths for images

--- a/app-db.json
+++ b/app-db.json
@@ -4,8 +4,8 @@
     "title": "श्री गुरु जम्भेश्वर शब्दवाणी",
     "subtitle": "120 शब्द",
     "author": "श्री गुरु जम्भेश्वर",
-	"cardImage": require('../../assets/om.png'), 	
-    "coverImage": require('../../assets/guru-jhambheshwar.png'), 
+	"cardImage": '../../assets/om.png', 	
+    "coverImage": '../../assets/guru-jhambheshwar.png', 
     "description": 'श्री गुरु जम्भेश्वर भगवान शब्दवाणी (120 शब्द)',
 	"chaptersCount": 120,
 	"chaptersHeading": " शब्दवाणी ",
@@ -856,9 +856,9 @@
     "id": "2",
     "title": "जम्भेश्वर आरती",
     "subtitle": "7 आरती",
-    "author": "Tulsidas",
-	"cardImage": require('../../assets/aarti.jpeg'), 
-    "coverImage": require('../../assets/aarti.jpeg'),
+    "author": "-",
+	"cardImage": '../../assets/aarti.jpeg', 
+    "coverImage": '../../assets/aarti.jpeg',
     "description": 'जम्भेश्वर आरती संग्रह',
 	"chaptersCount": 2,
 	"chaptersHeading": "आरती ",
@@ -919,8 +919,8 @@
 	"id": "3",
 	"title": "बिश्नोई उन्नतीस नियम",
 	"subtitle": "29 नियम",
-	"cardImage": require('../../assets/prayers.jpeg'), 
-    "coverImage": require('../../assets/guru-jhambheshwar.png'),
+	"cardImage": '../../assets/prayers.jpeg', 
+    "coverImage": '../../assets/guru-jhambheshwar.png',
     "description": "उन्नतीस नियम",
 	"chaptersCount": 1,
 	"chaptersHeading": "बिश्नोई उन्नतीस नियम ",
