Fix JSON formatting for card and cover images

--- a/app-db.json
+++ b/app-db.json
@@ -4,9 +4,9 @@
     "title": "श्री गुरु जम्भेश्वर शब्दवाणी",
     "subtitle": "120 शब्द",
     "author": "श्री गुरु जम्भेश्वर",
-	"cardImage": '../../assets/om.png', 	
-    "coverImage": '../../assets/guru-jhambheshwar.png', 
-    "description": 'श्री गुरु जम्भेश्वर भगवान शब्दवाणी (120 शब्द)',
+	"cardImage": "../../assets/om.png", 	
+    "coverImage": "../../assets/guru-jhambheshwar.png", 
+    "description": "श्री गुरु जम्भेश्वर भगवान शब्दवाणी (120 शब्द)",
 	"chaptersCount": 120,
 	"chaptersHeading": " शब्दवाणी ",
 	"bookmarkEnabled": true,
@@ -857,8 +857,8 @@
     "title": "जम्भेश्वर आरती",
     "subtitle": "7 आरती",
     "author": "-",
-	"cardImage": '../../assets/aarti.jpeg', 
-    "coverImage": '../../assets/aarti.jpeg',
+	"cardImage": "../../assets/aarti.jpeg", 
+    "coverImage": "../../assets/aarti.jpeg",
     "description": 'जम्भेश्वर आरती संग्रह',
 	"chaptersCount": 2,
 	"chaptersHeading": "आरती ",
@@ -919,8 +919,8 @@
 	"id": "3",
 	"title": "बिश्नोई उन्नतीस नियम",
 	"subtitle": "29 नियम",
-	"cardImage": '../../assets/prayers.jpeg', 
-    "coverImage": '../../assets/guru-jhambheshwar.png',
+	"cardImage": "../../assets/prayers.jpeg", 
+    "coverImage": "../../assets/guru-jhambheshwar.png",
     "description": "उन्नतीस नियम",
 	"chaptersCount": 1,
 	"chaptersHeading": "बिश्नोई उन्नतीस नियम ",
